ingress_resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: <namespace>
spec:
  rules:
  - host: "<your-host>"
    http:
      paths:
      - pathType: Prefix
        path: /sample-1
        backend:
          service:
            name: sample-1
            port:
              number: 3000
  - host: "<your-host>"
    http:
      paths:
      - pathType: Prefix
        path: /sample-2
        backend:
          service:
            name: sample-2
            port:
              number: 3000
